añadido funcion de asociar con jefe en el registro